router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__array.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: doc
---
{
    "read user",
    "read username",
    "review",
}
