router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__filter_basic_query.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: doc
---
{
    "internal",
    "profile",
    "read user",
    "read username",
}
